fox: Add clean function to remove target folder before compilation and fix javac opts